--- a/vagrant/core/Vagrantfile
+++ b/vagrant/core/Vagrantfile
@@ -15,16 +15,30 @@ Vagrant.configure("2") do |config|
 #  config.vm.network :forwarded_port, guest: 3389, host: 3389
 #  config.vm.network :forwarded_port, guest: 5985, host: 5985, id: "winrm", auto_correct: true
 
-  # optional
+  config.vm.network "private_network", ip: "192.168.50.5"
 
-  # config.winrm.username = "vagrant"
-  # config.winrm.password = "vagrant"
+  config.winrm.username = "Administrator"
+  config.winrm.password = "Passw0rd123"
+
+  config.vm.provision "shell",
+    path: "guest-tools.ps1",
+    upload_path: "C:\\Windows\\Temp\\vagrant-shell",
+    reboot: true
+
+  config.vm.provision "shell",
+    path: "windows-features.ps1",
+    upload_path: "C:\\Windows\\Temp\\vagrant-shell"
 
   config.vm.provider "virtualbox" do |vb|
   #   # vb.gui = true
   #   vb.memory = "2048"
   #   vb.cpus = 2
-     vb.name = "Windows_2016-core"
+     vb.name = "Windows_2016-vagrant-core"
+     vb.customize ["storageattach", :id,
+               "--storagectl", "IDE Controller",
+               "--port", "0", "--device", "1",
+               "--type", "dvddrive",
+               "--medium", "/Applications/VirtualBox.app/Contents/MacOS/VBoxGuestAdditions.iso"]
    end
 
 end
